grammar.js
    source_file: $ => repeat($._top_level_item),

    _top_level_item: $ => choice(
      $.module_declaration,
      $.import_declaration,
      $.function_definition,
      $.type_definition,
      $.binding_declaration,
      $.multi_binding_declaration,
      $.compile_time_when,
      $.compiler_error_directive,
      $.attribute,
      ';',
    ),

    module_declaration: $ => prec.right(seq(
      'module',
      field('name', $.module_path),
      repeat(field('attribute', $.attribute)),
    )),

    module_path: $ => prec.left(seq(
      $.identifier,
      repeat(seq('.', $.identifier)),
    )),

    function_definition: $ => prec.right(seq(
      optional('pub'),
      'let',
      field('name', $.function_name),
      optional(field('type_parameters', $.generic_parameters)),
      field('parameters', $.parameter_list),
      optional(seq(':', field('return_type', $.return_type))),
      repeat(field('attribute', $.attribute)),
      optional(field('body', choice(
        $.block,
        seq('=', $.expression),
      ))),
    )),

    function_name: $ => choice(
      field('function', $.identifier),
      seq(
        field('owner', choice(
          $.identifier,
          seq($.identifier, $.generic_parameters),
          seq('(', $.type, ')'),
        )),
        '.',
        field('method', $.identifier),
      ),
    ),

    parameter_list: $ => seq(
      '(',
      optional(seq(
        commaSep1(choice(
          $.receiver_parameter,
          $.parameter,
          $.variadic_parameter,
        )),
        optional(','),
      )),
      ')',
    ),

    receiver_parameter: $ => choice(
      alias('self', $.identifier),
      seq('*', optional('mut'), alias('self', $.identifier)),
    ),

    parameter: $ => seq(
      commaSep1($.parameter_name),
      ':',
      optional('...'),
      field('type', $.type),
      optional(seq('=', field('default', $.expression))),
    ),

    parameter_name: $ => seq(
      optional('mut'),
      field('name', $.identifier),
      optional(seq('=', field('default', $.expression))),
    ),

    return_type: $ => choice(
      $.type,
      seq('(', commaSep1($.type), ')'),
    ),

    type_definition: $ => seq(
      optional('pub'),
      'let',
      field('name', $.type_identifier),
      optional(field('type_parameters', $.generic_parameters)),
      '=',
      'type',
      optional('alias'),
      field('value', $.type),
    ),

    binding_declaration: $ => prec.right(seq(
      optional('pub'),
      'let',
      optional('mut'),
      field('name', $.identifier),
      optional(field('type_parameters', $.generic_parameters)),
      optional(seq(':', field('type', $.type))),
      choice(
        seq(
          '=',
          optional('comptime'),
          field('value', $.expression),
          repeat(field('attribute', $.attribute)),
        ),
        repeat1(field('attribute', $.attribute)),
      ),
    )),

    block: $ => seq('{', repeat(seq($.statement, optional(';'))), '}'),

    return_statement: $ => prec.right(seq('return', optional(commaSep1($.expression)))),
    expression_statement: $ => $.expression,

    compile_time_when: $ => prec.right(seq(
      'when',
      field('condition', $.expression),
      field('consequence', $.compile_time_block),
      repeat(seq('else', 'when', field('condition', $.expression), field('consequence', $.compile_time_block))),
      optional(seq('else', field('alternative', $.compile_time_block))),
    )),

    compile_time_block: $ => seq(
      '{',
      repeat(choice($.module_declaration, $.import_declaration, $.statement, ';')),
      '}',
    ),

    compiler_error_directive: $ => seq(
      '@', alias('compiler_error', $.builtin_name), '(', $.string_literal, ')',
    ),

    attribute: $ => prec.right(seq(
      '@',
      field('name', $.attribute_name),
      optional(seq('(', optional(seq(commaSep1($.attribute_argument), optional(','))), ')')),
    )),

    binary_expression: $ => choice(
      binary($, PREC.LOGICAL_OR, '||'),
      binary($, PREC.LOGICAL_AND, '&&'),
      binary($, PREC.BITWISE_OR, '|'),
      binary($, PREC.BITWISE_XOR, '^'),
      binary($, PREC.BITWISE_AND, '&'),
      binary($, PREC.COMPARISON, choice('==', '!=', '<', '>', '<=', '>=')),
      binary($, PREC.SHIFT, choice(seq('<', '<'), seq('>', '>'))),
      binary($, PREC.ADD, choice('+', '-')),
      binary($, PREC.MULTIPLY, choice('*', '/', '%')),
    ),

    call_expression: $ => prec.left(PREC.POSTFIX, seq(
      field('function', $.expression),
      field('arguments', $.argument_list),
    )),

    argument_list: $ => seq(
      '(',
      optional(seq(commaSep1($.expression), optional('...'), optional(','))),
      ')',
    ),

    field_expression: $ => prec.left(PREC.POSTFIX, seq(
      field('value', $.expression), '.', field('field', $.identifier),
    )),

    enum_literal: $ => seq('.', field('variant', $.identifier)),

    struct_literal: $ => prec.dynamic(1, seq(
      choice(
        seq('.', '{'),
        seq(field('type', $.named_type), '.', '{'),
      ),
      optional(choice(
        seq(commaSep1($.field_initializer), optional(',')),
        seq(commaSep1($.flag_initializer), optional(',')),
      )),
      '}',
    )),

    field_initializer: $ => choice(
      seq(field('field', $.identifier), '=', field('value', $.expression)),
      $.no_initializer,
    ),

    builtin_expression: $ => choice(
      seq('@', field('name', alias(choice('len', 'repr'), $.builtin_name)), '(', $.expression, ')'),
      seq('@', field('name', alias(choice('sizeof', 'alignof'), $.builtin_name)), '(', choice($.type, $.expression), ')'),
      seq('@', field('name', alias('offsetof', $.builtin_name)), '(', $.type, ',', $.identifier, ')'),
    ),

    named_type: $ => seq($.type_path, optional($.type_arguments)),
    type_path: $ => prec.left(seq($.type_identifier, repeat(seq('.', $.type_identifier)))),
    type_arguments: $ => seq('<', commaSep1($.type), optional(','), '>'),

    struct_type: $ => seq(
      'struct',
      repeat($.attribute),
      '{',
      optional(seq(commaSep1($.struct_field), optional(','))),
      '}',
    ),

    struct_field: $ => choice(
      seq(field('name', $.identifier), ':', field('type', $.type)),
      $.union_type,
    ),

    literal: $ => choice(
      $.integer_literal,
      $.float_literal,
      $.string_literal,
      $.c_string_literal,
      $.character_literal,
      $.boolean_literal,
      $.nil_literal,
    ),

    integer_literal: _ => token(choice(
      /0[bB][01]+/,
      /0[oO][0-7]+/,
      /0[xX][0-9a-fA-F]+/,
      /[0-9]+/,
    )),
    string_literal: $ => seq('"', repeat(choice($.escape_sequence, $.string_content)), '"'),
    string_content: _ => token.immediate(prec(1, /[^"\\\n]+/)),
    boolean_literal: _ => choice('true', 'false'),
    identifier: _ => /[A-Za-z_][A-Za-z0-9_]*/,
    type_identifier: $ => alias($.identifier, $.type_identifier),
    attribute_name: $ => alias($.identifier, $.attribute_name),
