test/corpus/staging.txt
==================
compile-time type parameters and applications
==================

module sample
let Box($T: type) = type struct { value: T }
let Size($T: type) = @sizeof(T)
let identity($T: type, value: T): T = value
let (Box($T)).get(self): T = self.value
let value = Box(i32).{ value=identity(i32, 4) }

---

(source_file
  (module_declaration
    (module_path
      (identifier)))
  (type_definition
    (type_identifier
      (type_identifier))
    (type_parameter_list
      (type_parameter
        (type_identifier
          (type_identifier))))
    (struct_type
      (struct_field
        (identifier)
        (named_type
          (type_path
            (type_identifier
              (type_identifier)))))))
  (function_definition
    (function_name
      (identifier))
    (parameter_list
      (type_parameter
        (type_identifier
          (type_identifier))))
    (builtin_expression
      (builtin_name)
      (identifier)))
  (function_definition
    (function_name
      (identifier))
    (parameter_list
      (type_parameter
        (type_identifier
          (type_identifier)))
      (parameter
        (parameter_name
          (identifier))
        (named_type
          (type_path
            (type_identifier
              (type_identifier))))))
    (return_type
      (named_type
        (type_path
          (type_identifier
            (type_identifier)))))
    (identifier))
  (function_definition
    (function_name
      (named_type
        (type_path
          (type_identifier
            (type_identifier)))
        (type_arguments
          (captured_type
            (type_identifier
              (type_identifier)))))
      (identifier))
    (parameter_list
      (receiver_parameter
        (identifier)))
    (return_type
      (named_type
        (type_path
          (type_identifier
            (type_identifier)))))
    (field_expression
      (identifier)
      (identifier)))
  (binding_declaration
    (identifier)
    (struct_literal
      (call_expression
        (identifier)
        (argument_list
          (identifier)))
      (field_initializer
        (identifier)
        (call_expression
          (identifier)
          (argument_list
            (identifier)
            (literal
              (integer_literal))))))))

==================
when in declarations statements expressions and types
==================

module sample
when OS == .Linux { let selected: i32 = 1 } else { let selected: i32 = 2 }
let Integer = type when PointerBits == 64 { i64 } else { i32 }
let value = when true { 1 } else { 2 }
let choose(): i32 {
  when true { return value } else { return 0 }
  @compiler_assert(value == 1, "selected value")
}

---

(source_file
  (module_declaration
    (module_path
      (identifier)))
  (compile_time_when
    (binary_expression
      (identifier)
      (enum_literal
        (identifier)))
    (compile_time_block
      (binding_declaration
        (identifier)
        (named_type
          (type_path
            (type_identifier
              (type_identifier))))
        (literal
          (integer_literal))))
    (compile_time_block
      (binding_declaration
        (identifier)
        (named_type
          (type_path
            (type_identifier
              (type_identifier))))
        (literal
          (integer_literal)))))
  (binding_declaration
    (identifier)
    (identifier))
  (compile_time_when
    (binary_expression
      (identifier)
      (literal
        (integer_literal)))
    (compile_time_block
      (expression_statement
        (identifier)))
    (compile_time_block
      (expression_statement
        (identifier))))
  (binding_declaration
    (identifier)
    (when_expression
      (literal
        (boolean_literal))
      (when_expression_block
        (literal
          (integer_literal)))
      (when_expression_block
        (literal
          (integer_literal)))))
  (function_definition
    (function_name
      (identifier))
    (parameter_list)
    (return_type
      (named_type
        (type_path
          (type_identifier
            (type_identifier)))))
    (block
      (compile_time_when
        (literal
          (boolean_literal))
        (compile_time_block
          (return_statement
            (identifier)))
        (compile_time_block
          (return_statement
            (literal
              (integer_literal)))))
      (compiler_assert_directive
        (builtin_name)
        (binary_expression
          (identifier)
          (literal
            (integer_literal)))
        (string_literal
          (string_content))))))

==================
conditional link collection
==================

module sample @link(
  when OS == .Windows { system "kernel32", }
  else when OS == .MacOS { framework "CoreFoundation", }
  else { @compiler_error("unsupported target") }
)

---

(source_file
  (module_declaration
    (module_path
      (identifier))
    (attribute
      (link_attribute
        (attribute_name)
        (link_item
          (link_when
            (binary_expression
              (identifier)
              (enum_literal
                (identifier)))
            (link_block
              (link_item
                (link_entry
                  (link_kind)
                  (string_literal
                    (string_content)))))
            (binary_expression
              (identifier)
              (enum_literal
                (identifier)))
            (link_block
              (link_item
                (link_entry
                  (link_kind)
                  (string_literal
                    (string_content)))))
            (link_block
              (link_item
                (compiler_error_directive
                  (builtin_name)
                  (string_literal
                    (string_content)))))))))))
